Agregadas imágenes nuevas al portafolio

--- a/about.html
+++ b/about.html
@@ -2,21 +2,38 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre mí / About - Jonathan Jiménez</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Conoce más sobre Jonathan Jiménez, su trayectoria, habilidades técnicas y experiencia en soporte y desarrollo web." />
+  <meta name="author" content="Jonathan Jiménez" />
+  <meta name="robots" content="index, follow" />
+
+  <meta property="og:title" content="Sobre mí | Jonathan Jiménez" />
+  <meta property="og:description" content="Mi perfil profesional, formación, fortalezas y visión como desarrollador web y técnico en TI." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jonathan-jimenez.netlify.app/about.html" />
+  <meta property="og:image" content="https://jonathan-jimenez.netlify.app/img/about.jpg" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Sobre mí | Jonathan Jiménez" />
+  <meta name="twitter:description" content="Descubre mi experiencia, habilidades y filosofía de trabajo." />
+  <meta name="twitter:image" content="https://jonathan-jimenez.netlify.app/img/about.jpg" />
+  <meta property="og:image" content="https://jonathan-jimenez.netlify.app/images/ing.png">
+
+
+  <title>Sobre mí | Jonathan Jiménez</title>
+  <meta name="keywords" content="sobre mí, Jonathan Jiménez, desarrollador web, soporte TI, experiencia profesional" />
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
         <div class="profile">
-            <img src="assets/images/jonathan.png" alt="Jonathan Jiménez" style="width:150px; border-radius: 50%;">
+            <img src="assets/images/jonathan.jpeg" alt="Jonathan Jiménez" style="width:150px; border-radius: 50%;">
             <h1>Jonathan Jiménez</h1>
             <p>Ing. de Software y Redes</p>
         </div>
         <nav>
             <a href="index.html">Inicio / Home</a>
-            <a href="about.html">Sobre mí / About</a>
             <a href="portfolio.html">Portafolio / Portfolio</a>
             <a href="contact.html">Contacto / Contact</a>
         </nav>
@@ -26,6 +43,11 @@
             <h2>Sobre mí / About Me</h2>
             <p>Hola, soy Jonathan Jiménez, ingeniero en software y redes con experiencia en soporte técnico y desarrollo web. Me apasiona la tecnología y ayudar a las personas y empresas a resolver sus necesidades digitales. Actualmente me especializo en el desarrollo de sitios web responsivos y en brindar soluciones de soporte técnico eficientes, tanto en español como en inglés.</p>
             <p>Mi objetivo profesional es seguir creciendo en el ámbito de la tecnología, aportar valor a cada proyecto en el que participo y construir una carrera sólida que me permita mejorar mi calidad de vida y la de mi familia.</p>
+            <div class="flex flex-col items-center my-8">
+  <img src="images/portada.png" alt="Jonathan Jiménez" class="rounded-xl w-full max-w-md shadow-md">
+  <p class="text-gray-300 mt-4 text-center">Jonathan Jiménez, Ing. en Software y Redes</p>
+</div>
+
         </section>
     </main>
     <footer>
