--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<<head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jonathan Jiménez - Portafolio Web</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Bienvenido al portafolio de Jonathan Jiménez, desarrollador web y especialista en soporte técnico. Conoce mis proyectos y habilidades." />
+  <meta name="author" content="Jonathan Jiménez" />
+  <meta name="robots" content="index, follow" />
+
+  <meta property="og:title" content="Jonathan Jiménez | Portafolio Profesional" />
+  <meta property="og:description" content="Descubre mis servicios como desarrollador web y soporte TI. Proyectos, experiencia y contacto directo." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tu-url.netlify.app/" />
+  <meta property="og:image" content="https://tu-url.netlify.app/img/portada.jpg" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Jonathan Jiménez | Portafolio Profesional" />
+  <meta name="twitter:description" content="Explora mis habilidades, proyectos y formas de contacto." />
+  <meta name="twitter:image" content="https://tu-url.netlify.app/img/portada.jpg" />
+
+  <title>Jonathan Jiménez | Portafolio Profesional</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <style>
     body {
@@ -80,7 +95,7 @@
   </style>
 </head>
 <body>
-  <!-- #mantiene desactivado
+  <!--
   <header>
     <nav>
       <a href="index.html">Inicio / Home</a>
@@ -91,13 +106,13 @@
   </header>
 -->
   <main class="hero">
-    <img src="assets/images/jonathan.png" alt="Jonathan Jiménez" />
+    <img src="assets/images/jonathan.jpeg" alt="Jonathan Jiménez" />
     <h1>Jonathan Jiménez</h1>
     <p>Ingeniero en Software y Redes | Desarrollo Web & Soporte Técnico</p>
 
     <div class="btn-group">
       <a href="about.html">Sobre mí / About</a>
-      <a href="portfolio.html">portafolio / Portfolio</a>
+      <a href="portfolio.html"> portafolio / Portfolio</a>
       <a href="contact.html">Contáctame / Contact</a>
     </div>
   </main>
