--- a/portfolio.html
+++ b/portfolio.html
@@ -2,8 +2,23 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Explora proyectos técnicos y de desarrollo web realizados por Jonathan Jiménez. Redes, soporte y soluciones digitales." />
+  <meta name="author" content="Jonathan Jiménez" />
+  <meta name="robots" content="index, follow" />
+
+  <meta property="og:title" content="Portafolio | Jonathan Jiménez" />
+  <meta property="og:description" content="Proyectos destacados de desarrollo web, redes y soporte técnico." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tu-url.netlify.app/portfolio.html" />
+  <meta property="og:image" content="https://tu-url.netlify.app/img/portfolio.jpg" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Portafolio | Jonathan Jiménez" />
+  <meta name="twitter:description" content="Conoce mis proyectos realizados en desarrollo web y soporte técnico." />
+  <meta name="twitter:image" content="https://tu-url.netlify.app/img/portada.png" />
   <title>Portafolio / Portfolio - Jonathan Jiménez</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <style>
@@ -22,7 +37,7 @@
     }
 
     nav a {
-      color: #ccc;
+      color: #90caf9;
       margin: 0 10px;
       text-decoration: none;
     }
@@ -70,14 +85,13 @@
 <body>
   <header>
     <div class="profile">
-      <img src="assets/images/jonathan.png" alt="Jonathan Jiménez" />
+      <img src="assets/images/jonathan.jpeg" alt="Jonathan Jiménez" />
       <h1>Jonathan Jiménez</h1>
       <p>Ing. de Software y Redes</p>
     </div>
     <nav>
       <a href="index.html">Inicio / Home</a>
       <a href="about.html">Sobre mí / About</a>
-      <a href="portfolio.html">Portafolio / Portfolio</a>
       <a href="contact.html">Contacto / Contact</a>
     </nav>
   </header>
