--- a/contact.html
+++ b/contact.html
@@ -110,6 +110,7 @@
   <main>
     <h2 style="text-align:center;">Contacto / Contact Me</h2>
     <form action="https://formspree.io/f/mdkzevjr" method="POST" class="max-w-md mx-auto space-y-4"> 
+      <label for="text" >Nombre / Name:</label>
       <input type="text" id="name" name="name" required>
 
       <label for="email">Correo / Email:</label>
