agregada imagen promocional

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<<head>
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Bienvenido al portafolio de Jonathan Jiménez, desarrollador web y especialista en soporte técnico. Conoce mis proyectos y habilidades." />
