--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
     </header>
     <main>
         <section>
-            <h2>Sobre mí / About Me</h2>
-             <img src="images/ing.png" alt="Jonathan Jiménez - Ingeniero de Software y Redes" class="perfil-img" />
+            <subtitle><h2>Sobre mí / About Me</h2></subtitle>
+            <img src="images/ing.png" alt="Jonathan Jiménez - Ingeniero de Software y Redes" class="perfil-img" />
             <p>Hola, soy Jonathan Jiménez, ingeniero en software y redes con experiencia en soporte técnico y desarrollo web. Me apasiona la tecnología y ayudar a las personas y empresas a resolver sus necesidades digitales. Actualmente me especializo en el desarrollo de sitios web responsivos y en brindar soluciones de soporte técnico eficientes, tanto en español como en inglés.</p>
             <p>Mi objetivo profesional es seguir creciendo en el ámbito de la tecnología, aportar valor a cada proyecto en el que participo y construir una carrera sólida que me permita mejorar mi calidad de vida y la de mi familia.</p>
             <div class="flex flex-col items-center my-8">
