--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
   <main class="hero">
     <img src="assets/images/jonathan.jpeg" alt="Jonathan Jiménez" />
     <h1>Jonathan Jiménez</h1>
+    <img src="assets/images/ing.png" alt="Jonathan Jiménez - Ingeniero en Software y Redes" class="perfil-img" />
     <p>Ingeniero en Software y Redes | Desarrollo Web & Soporte Técnico</p>
 
     <div class="btn-group">
