se agrega codigo para generar codigo qr

--- a/portfolio.html
+++ b/portfolio.html
@@ -101,6 +101,14 @@
       <h2 style="text-align:center; margin-top: 2rem;">Portafolio / Projects</h2>
       <div class="projects-container">
         <div class="project-card">
+          <h3>Generador de Códigos QR</h3>
+          <p>Desarrollé una aplicación web que permite generar códigos QR de forma rápida y personalizable. Utiliza HTML, CSS y JavaScript puro. Permite descargar el QR generado.</p>
+           <a href="https://https://jonathan-jimenez.netlify.app/" target="_blank">Ver en GitHub</a> |
+           <a href="https://jonathan-jimenez.netlify.app/" target="_blank">Ver Demo</a>
+         </p>
+        </div>
+
+        <div class="project-card">
           <h3>Soporte Técnico para Red Empresarial</h3>
           <p>Configuré, aseguré y optimicé la red de una pequeña empresa. Implementé políticas de seguridad, segmentación y acceso remoto seguro. Tecnologías: Cisco, Fortinet, Windows Server.</p>
         </div>
