--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
       <div class="projects-container">
         <div class="project-card">
           <h3>Generador de Códigos QR</h3>
-          <p>Desarrollé una aplicación web que permite generar códigos QR de forma rápida y personalizable. Utiliza HTML, CSS y JavaScript puro. Permite descargar el QR generado.</p>
+          <p>Desarrollé una aplicación web que permite generar códigos QR personalizados. No requiere instalación ni backend.</p>
            <a href="https://github.com/johnbathory138/QR-code-Generator" target="_blank">Ver en GitHub</a> |
            <a href="https://jonathan-jimenez.netlify.app/" target="_blank">Ver Demo</a>
          </p>
