--- a/portfolio.html
+++ b/portfolio.html
@@ -103,8 +103,8 @@
         <div class="project-card">
           <h3>Generador de Códigos QR</h3>
           <p>Desarrollé una aplicación web que permite generar códigos QR personalizados. No requiere instalación ni backend.</p>
-           <a href="https://github.com/johnbathory138/QR-code-Generator" target="_blank">Ver en GitHub</a> |
-           <a href="https://jonathan-jimenez.netlify.app/" target="_blank">Ver Demo</a>
+           <a href="https://github.com/johnbathory138/jonathan_portfolio_site/blob/main/qr.html" target="_blank">Ver en GitHub</a> |
+           <a href="https://qr.html" target="_blank">Ver Demo</a>
          </p>
         </div>
 
