--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
           <h3>Generador de Códigos QR</h3>
           <p>Desarrollé una aplicación web que permite generar códigos QR personalizados. No requiere instalación ni backend.</p>
            <a href="https://github.com/johnbathory138/jonathan_portfolio_site/blob/main/qr.html" target="_blank">Ver en GitHub</a> |
-           <a href="https://qr.html" target="_blank">Ver Demo</a>
+           <a href="qr.html" target="_blank">Ver Demo</a>
          </p>
         </div>
 
