se agrega nuevo proyecto tienda web

--- a/portfolio.html
+++ b/portfolio.html
@@ -109,6 +109,14 @@
         </div>
 
         <div class="project-card">
+        <h3>Tienda de Productos Web</h3>
+        <p>Proyecto de tienda simple con formulario de compra y conexión a WhatsApp.</p>
+         <a href="https://mundorelax.netlify.app" target="_blank">🔗 Ver demo</a>
+         <a href="https://github.com/TU_USUARIO/tienda-venta-productos" target="_blank">📦 Ver código</a>
+        </div>
+
+
+        <div class="project-card">
           <h3>Soporte Técnico para Red Empresarial</h3>
           <p>Configuré, aseguré y optimicé la red de una pequeña empresa. Implementé políticas de seguridad, segmentación y acceso remoto seguro. Tecnologías: Cisco, Fortinet, Windows Server.</p>
         </div>
