se elimina imagen

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,6 @@
 <body>
   <header>
     <div class="profile">
-      <img src="assets/images/jonathan.jpeg" alt="Jonathan Jiménez" />
       <h1>Jonathan Jiménez</h1>
       <p>Ing. de Software y Redes</p>
     </div>
@@ -103,16 +102,16 @@
         <div class="project-card">
           <h3>Generador de Códigos QR</h3>
           <p>Desarrollé una aplicación web que permite generar códigos QR personalizados. No requiere instalación ni backend.</p>
-           <a href="https://github.com/johnbathory138/jonathan_portfolio_site/blob/main/qr.html" target="_blank">Ver en GitHub</a> |
-           <a href="qr.html" target="_blank">Ver Demo</a>
+           <a href="https://github.com/johnbathory138/jonathan_portfolio_site/blob/main/qr.html" target="_blank">📦 Ver en GitHub</a> |
+           <a href="qr.html" target="_blank">🔗 Ver Demo</a>
          </p>
         </div>
 
         <div class="project-card">
-        <h3>Tienda de Productos Web</h3>
-        <p>Proyecto de tienda simple con formulario de compra y conexión a WhatsApp.</p>
+        <h3>Mini tienda online</h3>
+        <p>Proyecto de tienda en línea con carrito de compras y envío por WhatsApp..</p>
+         <a href="https://github.com/johnbathory138/mundo_relax " target="_blank">📦 Ver en GitHub</a>
          <a href="https://mundorelax.netlify.app" target="_blank">🔗 Ver demo</a>
-         <a href="https://github.com/TU_USUARIO/tienda-venta-productos" target="_blank">📦 Ver código</a>
         </div>
 
 
